<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">JamStreamer</string>
    
    <string name="trackPreferences">track_preferences</string>
    <string name="currentTrackPreferences">currentTrack_preferences</string>
    <string name="indexPositionPreferences">indexPosition_preferences</string>
    <string name="hierarchyPreferences">hierarchy_preferences</string>
    <string name="playingWhileOrientationChangePreferences">playingWhileOrientationChange_preferences</string>
    
    <string name="mainArtists">Artists</string>
    <string name="mainAlbums">Albums</string>
    <string name="mainTracks">Tracks</string>
    <string name="mainTopTracksWeek">Top tracks this week</string>
    
    <string name="playlist">Playlist</string>
    <string name="backwardButton">Backward</string>
    <string name="previousButton">Previous</string>
    <string name="playButton">Play</string>
    <string name="nextButton">Next</string>
    <string name="forwardButton">Forward</string>
    <string name="playlistButton">Playlist</string>
    <string name="repeatButton">Repeat</string>
    <string name="shuffleButton">Shuffle</string>
    
    <string name="artistsByNameFieldText">Enter an artist</string>
    <string name="albumsByNameFieldText">Enter an album</string>
    <string name="tracksByNameFieldText">Enter a track</string>
    <string name="buttonText">Search</string>
    <string name="selectTrack">Select track</string>
    <string name="selectAlbum">Select album</string>
    <string name="selectAll">Select all</string>
    <string name="viewArtistFloatingText">View artist</string>
    <string name="viewAlbumFloatingText">View album</string>
    <string name="addTrackToPlaylistCAB">Add track(s)</string>
    <string name="addAlbumToPlaylistCAB">Add album(s)</string>
    <string name="playlistRemoveCAB">Remove track(s)</string>
    <string name="deletePlaylistCAB">Delete playlist</string>
    
    <string name="tracksByPopularityPerWeek">http://api.jamendo.com/v3.0/tracks/?client_id=19482a65&amp;format=jsonpretty&amp;order=popularity_week&amp;limit=25&amp;groupby=artist_id</string>
        
    <string name="artistsByNameJSONURL">http://api.jamendo.com/v3.0/artists/?client_id=19482a65&amp;format=jsonpretty&amp;order=popularity_total&amp;limit=25&amp;namesearch=%1$s</string>
    <string name="albumsByArtistIDJSONURL">http://api.jamendo.com/v3.0/artists/albums?client_id=19482a65&amp;format=jsonpretty&amp;order=id&amp;limit=25&amp;id=%1$s</string>
    
    <string name="albumsByNameJSONURL">http://api.jamendo.com/v3.0/albums?client_id=19482a65&amp;format=jsonpretty&amp;order=popularity_total&amp;limit=25&amp;namesearch=%1$s</string>
    <string name="tracksByAlbumIDJSONURL">http://api.jamendo.com/v3.0/albums/tracks?client_id=19482a65&amp;format=jsonpretty&amp;order=track_position&amp;limit=25&amp;id=%1$s</string>
    
    <string name="albumsByArtistNameJSONURL">http://api.jamendo.com/v3.0/artists/albums?client_id=19482a65&amp;format=jsonpretty&amp;order=id&amp;limit=25&amp;name=%1$s</string>
    <string name="tracksByAlbumNameJSONURL">http://api.jamendo.com/v3.0/albums/tracks?client_id=19482a65&amp;format=jsonpretty&amp;order=track_position&amp;limit=25&amp;name=%1$s</string>
    
    <string name="tracksByNameJSONURL">http://api.jamendo.com/v3.0/tracks?client_id=19482a65&amp;format=jsonpretty&amp;order=popularity_total&amp;limit=25&amp;namesearch=%1$s</string>
    <string name="trackByIDURL">http://storage-new.newjamendo.com/?from=app-b6747d04&amp;format=mp31&amp;trackid=%1$s</string>
    <string name="trackInformation">http://api.jamendo.com/v3.0/tracks/?client_id=19482a65&amp;format=jsonpretty&amp;imagesize=300&amp;id=%1$s</string>
</resources>
