<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
 
    <LinearLayout
        android:id="@+id/songDetailsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:paddingLeft="5dp">
               
        <TextView
            android:id="@+id/songTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>
        
        <ImageButton
            android:id="@+id/btnPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:background="@null"
            android:contentDescription="@string/playlistButton"
            android:src="@drawable/button_playlist" />

    </LinearLayout>
        
    <LinearLayout
        android:id="@+id/albumDetailsHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:layout_below="@id/songDetailsHeader"
        android:paddingLeft="5dp">    
        
        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/songThumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/albumDetailsHeader"
        android:layout_above="@+id/songProgressBar"
        android:layout_marginTop="10dp"
        android:gravity="center" >
        <ImageView
            android:id="@+id/albumArtImageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mainAlbums" />
    </LinearLayout>
    
    <SeekBar
    	android:id="@id/songProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timerDisplay"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:thumb="@drawable/img_seekbar_thumb"
        android:progressDrawable="@drawable/seekbar_progress"/>
    
    <LinearLayout
        android:id="@id/timerDisplay"
        android:layout_above="@+id/player_footer_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        
        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:textColor="#000000"
            android:textStyle="bold"/>
        
        <TextView
            android:id="@+id/songTotalDurationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </LinearLayout> 
    
    <LinearLayout
        android:id="@id/player_footer_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="1.0"
        android:gravity="left|center_vertical|start">
           
         <ImageButton
             android:id="@+id/btnRepeat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/img_repeat_default"
             android:background="@null"
             android:contentDescription="@string/repeatButton"
             android:layout_weight="0.2"/>
            
        <ImageButton
            android:id="@+id/btnPrevious"
            android:src="@drawable/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/previousButton"
            android:layout_weight="0.2"/>

        <ImageButton
            android:id="@+id/btnPlay"
            android:src="@drawable/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/playButton"
            android:layout_weight="0.2"/>

        <ImageButton
            android:id="@+id/btnNext"
            android:src="@drawable/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/nextButton"
            android:layout_weight="0.2"/>

        <ImageButton
            android:id="@+id/btnShuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_shuffle_default"
            android:background="@null"
            android:contentDescription="@string/shuffleButton"
            android:layout_weight="0.2"/>

    </LinearLayout>
 
</RelativeLayout>